--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "Bot simples ",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js --port=3000",
-      "dev": "node --watch ./index.js",
+      "start": "node src/index.js --port=3000",
+      "dev": "node --watch src/index.js",
       "build": "npm i",
-      "server": "node --env-file=.env --watch ./server.js"
+      "server": "node --env-file=.env --watch src/AI/server.js"
     },
     "keywords": [],
     "author": "",
